# CubismNativeComponents

./: .gitignore  CMakeLists.txt  License.md  Readme.md
Live2DCubismComponents/include/: Live2DCubismRendering.h  Live2DCubismRenderingInternal.h
Live2DCubismComponents/src/Framework/: Animation.c  AnimationSegmentEvaluationFunction.c  AnimationState.c  FloatSink.c  Hash.c  Json.c  Local.h  ModelExtensions.c  MotionJson.c  ParameterExtensions.c  PartExtensions.c
Live2DCubismComponents/src/Rendering/: GlBuffer.c  GlDraw.c  GlLoad.c  GlMaskbuffer.c  GlProgram.c  GlRenderer.c  GlStub.c  GlVersion.c  GlVertexArray.c  Local.h  RenderDrawable.c  SortableDrawable.c
SampleModels/Koharu/: Expression.motion3.json  Koharu.model3.json
SampleModels/MaskKun/: Clipping.model3.json
Samples/include/: SampleModel.h
Samples/src/: HelloAnimation.c  HelloCubism.c  SampleModel.c
Samples/src/Helper/: Allocation.c  Allocation.h  App.c  App.h  Gl.h  ISample.h  MsvcAllocation.c  PosixAllocation.c  stb_image.c
include/: Live2DCubismFramework.h  Live2DCubismFrameworkINTERNAL.h  Live2DCubismGlRendering.h  Live2DCubismGlRenderingINTERNAL.h
sample/: CMakeLists.txt
sample/assets/Mark/: Mark.userdata3.json
sample/src/: App.c  HelloCubism.c
src/Framework/: Animation.c  FloatBlendFunction.c  Local.h  Physics.c  PhysicsJson.c  PhysicsMath.c
src/Rendering/: GlDraw.c  GlMaskbuffer.c  GlMisc.c  GlProgram.c  GlRenderer.c  Local.h
